# chezmoi

./: .gitignore  Cargo.toml  Dockerfile  dev.Dockerfile  justfile  readme.md
agent/: APKBUILD  Cargo.toml  config-http.json  config-trace.json
agent/script/: config.json
agent/script/openrc/: chezmoi-agent
agent/src/: lib.rs  main.rs  metric.rs  prelude.rs
agent/src/collector/: atc_sensor.rs  helper.rs  internal.rs  miflora_sensor.rs  mod.rs  prelude.rs  system.rs
agent/src/exporter/: batch.rs  cache.rs  direct.rs  http.rs  mod.rs  prelude.rs  queue.rs  trace.rs
agent/src/helper/: cache.rs
agent/src/sensor/: atc_thermometer.rs  bluetooth.rs  bt_scanner.rs  miflora.rs  mod.rs  system.rs
agent/src/watcher/: bluetooth.rs  mod.rs
cache/: Cargo.toml
cache/src/: lib.rs
client/: Cargo.toml
client/assets/: style.css
client/src/: lib.rs  size.rs
client/src/asset/: style.css
client/src/component/: any_card.rs  binary_usage_card.rs  bluetooth_devices_card.rs  cpu_card.rs  head.rs  header.rs  helper.rs  icon.rs  line_chart.rs  memory_card.rs  miflora_card.rs  mod.rs  prelude.rs  swap_card.rs
client/src/component/card/: atc_thermometer.rs  binary_usage.rs  bluetooth_devices.rs  history_chart.rs  mi_thermometer.rs  miflora.rs  mod.rs  system_cpu.rs  system_memory.rs  system_swap.rs
client/src/component/single_value_card/: mod.rs
client/src/helper/: fmt.rs  mod.rs
client/src/view/: error.rs  mod.rs  prelude.rs
client/src/view/dashboard/: mod.rs
client/src/view/home/: mod.rs
client/tests/: helper.rs  view_dashboard.rs  view_home.rs
database/: Cargo.toml
database/migrations/sqlite/: 20241118103000_create-metrics-table_up.sql
database/src/: config.rs  helper.rs  lib.rs
database/src/metrics/: aggr.rs  entity.rs  macros.rs  mod.rs  name.rs  tags.rs  value.rs
database/src/metrics/aggr/: list.rs  mod.rs
database/src/metrics/entity/: create.rs  find_all.rs  find_latest.rs  helper.rs  mod.rs
entity/: Cargo.toml
entity/src/: address.rs  lib.rs
entity/src/metric/: mod.rs
helper/: Cargo.toml
helper/src/: env.rs
script/: alpine-arm32v6.Dockerfile  alpine-arm32v6.sh  alpine.Dockerfile  alpine.sh  debian.Dockerfile  debian.sh
server/: Cargo.toml
server/script/: config.json
server/script/debian/: preinst
server/script/systemd/: chezmoi.default  chezmoi.service
server/src/: app.rs  config.rs  helper.rs  lib.rs  main.rs  state.rs
server/src/entity/: mod.rs
server/src/entity/card/: atc_sensor.rs  mod.rs
server/src/router/: api_error.rs  api_metrics_create.rs  api_metrics_latest.rs  api_status.rs  asset.rs  mod.rs  ui_asset.rs  ui_dashboard.rs  ui_error.rs
server/src/router/api/: mod.rs  status.rs
server/src/router/ui/: error.rs  home.rs  mod.rs
server/src/service/dashboard/: atc_thermometer.rs  helper.rs  mi_thermometer.rs  miflora.rs  mod.rs  system.rs
storage/: Cargo.toml
storage/migrations/sqlite/: 20241211110000_create-metrics-table.sql
storage/src/: client.rs  lib.rs  writer.rs
storage/src/metric/: mod.rs
storage/tests/: helper.rs  metric-latest.rs
ui-static/: Cargo.toml
ui-static/assets/: style.css
ui-static/src/: asset.rs  lib.rs
ui-static/src/component/: header.rs  mod.rs  page.rs  prelude.rs  range.rs  value_cell.rs
ui-static/src/component/card/: atc_sensor.rs  mod.rs
ui-static/src/helper/: classes.rs  format.rs  mod.rs
ui-static/src/view/: dashboard.rs  mod.rs  prelude.rs
ui-static/tests/: dashboard.rs  helper.rs
ui-wasm/: Cargo.toml  index.html  readme.md  style.scss
ui-wasm/src/: main.rs
ui-wasm/src/component/: atc_sensor_card.rs  formatted_number.rs  header.rs  mod.rs  single_value_card.rs  temperature_card.rs  value_cell.rs
ui-wasm/src/helper/: mod.rs
ui-wasm/src/view/: dashboard.rs
