[workspace]
resolver = "2"
members = ["agent", "cache", "entity", "server", "storage", "ui-static"]

[workspace.package]
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
license-file = "LICENSE"

[workspace.dependencies]
anyhow = { version = "1.0" }
bluer = { version = "0.17", default-features = false }
indexmap = { version = "2.7" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
