[package]
name = "chezmoi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chezmoi-cache = { path = "../cache" }
chezmoi-entity = { path = "../entity", features = ["serde"] }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
