[package]
name = "chezmoi-agent"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true

[features]
default = ["collector-atc-sensor", "collector-miflora-sensor"]
bluetooth = ["dep:bluer"]
collector-atc-sensor = ["bluetooth", "watcher-bluetooth"]
collector-miflora-sensor = ["bluetooth", "watcher-bluetooth", "dep:bluer-miflora"]
watcher-bluetooth = ["bluetooth"]

[dependencies]
chezmoi-cache = { path = "../cache" }
chezmoi-entity = { path = "../entity", features = ["serde"] }

anyhow = { workspace = true }
bluer = { workspace = true, features = [
    "bluetoothd",
    "serde",
], default-features = false, optional = true }
bluer-miflora = { version = "*", optional = true }
futures = { version = "0.3" }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["indexmap"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
sysinfo = "0.33.0"
