[package]
name = "chezmoi-database"
version = "0.1.0"
edition = "2021"

[dependencies]
chezmoi-helper = { path = "../helper" }

anyhow = { workspace = true }
indexmap = { version = "2.6.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
