[package]
name = "chezmoi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chezmoi-cache = { path = "../cache" }
chezmoi-entity = { path = "../entity", features = ["serde"] }
chezmoi-storage = { path = "../storage" }

anyhow = { workspace = true }
axum = { version = "0.7" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_qs = { version = "0.13", features = ["axum", "tracing"] }
