[package]
name = "chezmoi-server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true

[package.metadata.deb]
name = "chezmoi-server"
license-file = ["LICENSE", "3"]
depends = ["libdbus-1-3", "$auto"]
section = "utility"
maintainer-scripts = "script/debian/"
conf-files = ["/etc/default/chezmoi-server"]
assets = [
    [
        "target/release/chezmoi-server",
        "usr/bin/",
        "755",
    ],
    [
        "script/config.json",
        "etc/chezmoi-server/config.json",
        "644",
    ],
    [
        "script/systemd/chezmoi.service",
        "lib/systemd/system/chezmoi-server.service",
        "644",
    ],
    [
        "script/systemd/chezmoi.default",
        "etc/default/chezmoi-server",
        "600",
    ],
]

[dependencies]
chezmoi-cache = { path = "../cache" }
chezmoi-entity = { path = "../entity", features = ["serde"] }
chezmoi-storage = { path = "../storage" }
chezmoi-ui-static = { path = "../ui-static" }

anyhow = { workspace = true }
axum = { version = "0.7" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_qs = { version = "0.13", features = ["axum", "tracing"] }
serde_json = "1.0.133"
bluer = { version = "0.17.3", default-features = false, features = ["serde"] }
